Fix an issue with layout components height and overflow

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -17,3 +17,5 @@ $border-radius-main: 10px;
 
 $main-color: #5c2d91;
 $main-color-light: #e6dfec;
+
+$header-height: 85px;
