--- a/src/views/teacher-class/components/lesson-plan/lesson-plan.scss
+++ b/src/views/teacher-class/components/lesson-plan/lesson-plan.scss
@@ -57,15 +57,13 @@
   .lesson-container__body {
     overflow: auto;
     height: calc(100% - 110px);
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
+    padding: 0 10px 10px;
     &--info {
       position: sticky;
       top: 0;
       z-index: 20;
       background: white;
-      padding-bottom: 5px;
+      padding: 10px 5px;
     }
 
     .progress {
@@ -97,7 +95,6 @@
     .activities {
       flex: 1;
 	  overscroll-behavior: contain;
-      margin-top: 10px;
     }
   }
 
