--- a/src/views/teacher-class/teacher-class.scss
+++ b/src/views/teacher-class/teacher-class.scss
@@ -12,10 +12,14 @@
     grid-column-start: 1;
     grid-column-end: 3;
   }
+  &__fixed-height {
+    height: calc(100vh - #{$header-height});
+    overflow: auto;
+  }
   &__sidebar {
     width: 320px;
     transition: 0.2s;
-    //overflow: hidden;
+    overflow: visible;
     border-bottom: 1px solid #7b7b7b;
     &--collapsed {
       margin-left: -240px;
@@ -79,7 +83,7 @@
     &__gallery {
       grid-column-start: unset;
       grid-column-end: unset;
-      height: 100%;
+      //height: 100%;
     }
     &__content {
       flex-direction: column;
